third_party/move/move-compiler-v2/tests/checking/abilities/v1/ability_constraint_generic_in_field.move
module 0x42::m {
    struct S<T: copy> { v: T }
    struct B<T> { v: S<T> }
}

module 0x42::n {
    struct A<T: copy> has copy { a: T }

    struct B<T> has copy {
        data: vector<A<T>>
    }
}
